[package]
name = "range-porter"
version = "0.1.1"
edition = "2024"
description = "Single-binary userspace TCP + UDP port-range forwarder to one target address."
license = "GPL-2.0-only"
repository = "https://github.com/geekdada/range-porter"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dashmap = "6.1.0"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "core"
harness = false
